--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
    "dependencies": {
       "@types/dinero.js": "^1.6.5",
       "@types/express": "^4.17.8",
+      "@types/lodash": "^4.14.163",
       "dinero.js": "^1.8.1",
       "express": "^4.17.1",
+      "lodash": "^4.17.20",
       "mysql": "^2.14.1",
       "pg": "^8.4.1",
       "reflect-metadata": "^0.1.10",
