--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
       "mysql": "^2.14.1",
       "pg": "^8.4.1",
       "reflect-metadata": "^0.1.10",
+      "ts-node-dev": "^1.0.0",
       "typeorm": "0.2.28"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node-dev src/index.ts",
+      "watch": "nodemon"
    }
 }
