--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
-      "ts-node": "3.3.0",
       "@types/node": "^8.0.29",
-      "typescript": "3.3.3333"
+      "prettier": "^2.1.2",
+      "ts-node": "3.3.0",
+      "tslint-plugin-prettier": "^2.3.0",
+      "typescript": "^3.3.3333",
+      "typescript-tslint-plugin": "^0.5.5"
    },
    "dependencies": {
       "@types/dinero.js": "^1.6.5",
@@ -18,10 +21,10 @@
       "pg": "^8.4.1",
       "reflect-metadata": "^0.1.10",
       "ts-node-dev": "^1.0.0",
+      "tslint": "^6.1.3",
       "typeorm": "0.2.28"
    },
    "scripts": {
-      "start": "ts-node-dev src/index.ts",
-      "watch": "nodemon"
+      "start": "ts-node-dev src/index.ts"
    }
 }
