--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       
       # Runs a set of commands using the runners shell
       - name: install typescript
-        run: npm install typescript -g
+        run: npm install typescript
         
       # Runs a set of commands using the runners shell
       - name: Do tslint check
