--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "@types/dinero.js": "^1.6.5",
       "@types/express": "^4.17.8",
       "@types/lodash": "^4.14.163",
+      "cors": "^2.8.5",
       "dinero.js": "^1.8.1",
       "express": "^4.17.1",
       "lodash": "^4.17.20",
@@ -25,6 +26,7 @@
       "typeorm": "0.2.28"
    },
    "scripts": {
+      "build": "tsc",
       "start": "ts-node-dev src/index.ts"
    }
 }
