--- a/package.json
+++ b/package.json
@@ -1,32 +1,50 @@
 {
-   "name": "MyProject",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "devDependencies": {
-      "@types/node": "^8.0.29",
-      "prettier": "^2.1.2",
-      "ts-node": "3.3.0",
-      "tslint-plugin-prettier": "^2.3.0",
-      "typescript": "^3.3.3333",
-      "typescript-tslint-plugin": "^0.5.5"
-   },
-   "dependencies": {
-      "@types/dinero.js": "^1.6.5",
-      "@types/express": "^4.17.8",
-      "@types/lodash": "^4.14.163",
-      "cors": "^2.8.5",
-      "dinero.js": "^1.8.1",
-      "express": "^4.17.1",
-      "lodash": "^4.17.20",
-      "mysql": "^2.14.1",
-      "pg": "^8.4.1",
-      "reflect-metadata": "^0.1.10",
-      "ts-node-dev": "^1.0.0",
-      "tslint": "^6.1.3",
-      "typeorm": "0.2.28"
-   },
-   "scripts": {
-      "build": "tsc",
-      "start": "ts-node-dev src/index.ts"
-   }
+    "name": "MyProject",
+    "version": "0.0.1",
+    "description": "Project developed with Express and Typescript",
+    "devDependencies": {
+        "@types/node": "^8.0.29",
+        "prettier": "^2.1.2",
+        "ts-node": "3.3.0",
+        "tslint-plugin-prettier": "^2.3.0",
+        "typescript": "^3.3.3333",
+        "typescript-tslint-plugin": "^0.5.5"
+    },
+    "dependencies": {
+        "@types/connect-ensure-login": "^0.1.5",
+        "@types/connect-pg-simple": "^4.2.2",
+        "@types/dinero.js": "^1.6.5",
+        "@types/express": "^4.17.8",
+        "@types/lodash": "^4.14.165",
+        "@types/passport": "^1.0.4",
+        "@types/passport-local": "^1.0.33",
+        "bcrypt": "^4.0.1",
+        "connect-ensure-login": "^0.1.1",
+        "connect-flash": "^0.1.1",
+        "connect-pg-simple": "^6.2.1",
+        "cors": "^2.8.5",
+        "dinero.js": "^1.8.1",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-flash": "0.0.2",
+        "express-session": "^1.17.0",
+        "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.20",
+        "mysql": "^2.14.1",
+        "nodemon": "^2.0.6",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "pg": "^8.4.1",
+        "ts-node-dev": "^1.0.0",
+        "tslint": "^6.1.3",
+        "typeorm": "0.2.28"
+    },
+    "scripts": {
+        "start": "ts-node-dev src/index.ts",
+        "tsc": "tsc",
+        "prod": "tsc && node ./build/index.js",
+        "kill": "kill -9 $(sudo lsof -t -i:8082)",
+        "tslint-fix": "tslint --fix --project .",
+        "nodemon": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"kill -9 $(sudo lsof -t -i:8082) ; ts-node src/index.ts\""
+    }
 }
