--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Change working directory to server
+        run: cd server
+        
+      # Runs a single command using the runners shell
       - name: Do npm build
         run: npm build
       
