--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
         "typescript-tslint-plugin": "^0.5.5"
     },
     "dependencies": {
+        "@azure/storage-blob": "^12.3.0",
         "@types/connect-ensure-login": "^0.1.5",
         "@types/connect-pg-simple": "^4.2.2",
         "@types/dinero.js": "^1.6.5",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.8",
         "@types/lodash": "^4.14.165",
         "@types/passport": "^1.0.4",
