--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
     "devDependencies": {
         "@types/node": "^8.0.29",
         "prettier": "^2.1.2",
-        "ts-node": "3.3.0",
+        "ts-node": "^3.3.0",
         "tslint-plugin-prettier": "^2.3.0",
-        "typescript": "^3.3.3333",
+        "typescript": "^3.9.7",
         "typescript-tslint-plugin": "^0.5.5"
     },
     "dependencies": {
@@ -17,7 +17,10 @@
         "@types/dinero.js": "^1.6.5",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.8",
+        "@types/into-stream": "^3.1.1",
         "@types/lodash": "^4.14.165",
+        "@types/mime-types": "^2.1.0",
+        "@types/multer": "^1.4.4",
         "@types/passport": "^1.0.4",
         "@types/passport-local": "^1.0.33",
         "bcrypt": "^4.0.1",
@@ -30,8 +33,11 @@
         "express": "^4.17.1",
         "express-flash": "0.0.2",
         "express-session": "^1.17.0",
+        "into-stream": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.20",
+        "mime-types": "^2.1.27",
+        "multer": "^1.4.2",
         "mysql": "^2.14.1",
         "nodemon": "^2.0.6",
         "passport": "^0.4.1",
