--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,6 +9,7 @@
     "ag-grid-community": "^24.1.0",
     "ag-grid-enterprise": "^24.1.0",
     "ag-grid-react": "^24.1.0",
+    "axios": "^0.21.0",
     "bulma": "^0.9.1",
     "dinero.js": "^1.8.1",
     "node-sass": "^4.14.1",
