Azure deployment working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,9 @@
     "editor.codeActionsOnSave": {
       "source.fixAll.tslint": true
   },
+  "appService.zipIgnorePattern": [
+    "node_modules{,/**}",
+    ".vscode{,/**}"
+  ],
+  "appService.defaultWebAppToDeploy": "None",
 }
