--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,6 @@
     "devDependencies": {
         "@types/node": "^8.0.29",
         "prettier": "^2.1.2",
-        "ts-node": "^3.3.0",
         "tslint-plugin-prettier": "^2.3.0",
         "typescript": "^3.9.7",
         "typescript-tslint-plugin": "^0.5.5"
@@ -33,7 +32,6 @@
         "express": "^4.17.1",
         "express-flash": "0.0.2",
         "express-session": "^1.17.0",
-        "into-stream": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.20",
         "mime-types": "^2.1.27",
@@ -43,16 +41,16 @@
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "pg": "^8.4.1",
-        "ts-node-dev": "^1.0.0",
         "tslint": "^6.1.3",
         "typeorm": "0.2.28"
     },
     "scripts": {
-        "start": "ts-node-dev src/index.ts",
+        "start": "node ./build/index.js",
+        "build": "tsc && cp ormconfig.json ./build/",
+        "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
         "tsc": "tsc",
         "prod": "tsc && node ./build/index.js",
         "kill": "kill -9 $(sudo lsof -t -i:8082)",
-        "tslint-fix": "tslint --fix --project .",
-        "nodemon": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"kill -9 $(sudo lsof -t -i:8082) ; ts-node src/index.ts\""
+        "tslint-fix": "tslint --fix --project ."
     }
 }
