--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
     
-      # Runs a single command using the runners shell
-      - name: Do npm build
-        run: npm build
-      
       # Runs a set of commands using the runners shell
       - name: install typescript
         run: npm install typescript
+        
+      # Runs a single command using the runners shell
+      - name: Do npm build
+        run: npm run build
+    
         
       # Runs a set of commands using the runners shell
       - name: Do tslint check
