--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Do npm build
-        run: npm run build
+        run: CI=  npm run build
     
         
       # Runs a set of commands using the runners shell
