--- a/.github/workflows/master_nakad.yml
+++ b/.github/workflows/master_nakad.yml
@@ -7,7 +7,10 @@ on:
   push:
     branches:
       - master
-
+defaults:
+  run:
+    working-directory: ./server
+    
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
