--- a/.github/workflows/master_nakad.yml
+++ b/.github/workflows/master_nakad.yml
@@ -26,8 +26,8 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm run build --if-present
-        npm run test --if-present
+        CI=  npm run build --if-present
+        CI=  npm run test --if-present
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
