--- a/server/webapp/package.json
+++ b/server/webapp/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "bulma": "^0.9.1",
     "dinero.js": "^1.8.1",
+    "form-data": "^3.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-bulma-components": "^3.4.0",
