Fixing the tsconfig.json

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -23,7 +23,11 @@
          }
       ]
    },
+   "include": [
+      "src/**/*"
+   ],
    "exclude": [
-      "webapp/**/*"
+      "webapp/**/*",
+      "tools/**/*"
    ]
 }
