--- a/server/webapp/package.json
+++ b/server/webapp/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.16",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "ag-grid-community": "^24.1.0",
     "ag-grid-react": "^24.1.0",
     "axios": "^0.21.0",
@@ -21,7 +25,8 @@
     "react-moment": "^1.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +49,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8082/"
+  "proxy": "http://localhost:8082/",
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.6"
+  }
 }
