--- a/.github/workflows/develop_nakad-dev.yml
+++ b/.github/workflows/develop_nakad-dev.yml
@@ -7,7 +7,10 @@ on:
   push:
     branches:
       - develop
-
+defaults:
+  run:
+    working-directory: ./server
+    
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
